--- a/GhasreMobile/Areas/User/Views/Ticket/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Ticket/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SendTicketVm
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "پشتیبانی";
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
