--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -178,6 +178,9 @@
                                         <a class="link-text" href="/Admin/">پنل مدیریت</a>
                                     </li>
                                     <li>
+                                        <a class="link-text" href="/User/Profile">پنل کاربری</a>
+                                    </li>
+                                    <li>
                                         <a class="link-text" href="/LogOut">خروج</a>
                                     </li>
                                 </ul>
