--- a/GhasreMobile/Areas/User/Views/Profile/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Profile/Index.cshtml
@@ -39,7 +39,7 @@
                 }
                 else
                 {
-                    <span>@Model.Name</span>
+                    <a  class="link-text">@Model.Name</a>
                 }
             </dd>
             <dt>شماره تلفن</dt>
@@ -49,7 +49,7 @@
 </div>
 
 <partial name="_OrderStatus" model="Model.TblOrder" />
-@{ 
+@{
     List<TblNotification> list = ViewBag.Notification as List<TblNotification>;
 }
 
@@ -59,19 +59,18 @@
     <div class="uk-modal-dialog uk-modal-body">
         <form>
             <h3 class="uk-margin-remove-bottom">
-                تایین نام
+                ویرایش نام
             </h3>
 
-            <p class="uk-margin-small-top text-2">
-                برای ثبت سفارش و استفاده از برخی امکانات سایت مانند تالار گفتگو، پشتیبانی و... لازم است نام و نام خانوادگی خود را وارد نمایید.
-            </p>
+            @*  <p class="uk-margin-small-top text-2">
+            برای ثبت سفارش و استفاده از برخی امکانات سایت مانند تالار گفتگو، پشتیبانی و... لازم است نام و نام خانوادگی خود را وارد نمایید.
+        </p>*@
 
             <div class="fg-col">
                 <label class="fg-label">نام و نام خانوادگی</label>
                 <input type="text" class="entry" value="" />
                 <span class="text-danger"></span>
             </div>
-
             <div class="action uk-margin-medium-top">
                 <button class="btn btn-primary">تایید</button>
             </div>
