--- a/GhasreMobile/Views/Home/About.cshtml
+++ b/GhasreMobile/Views/Home/About.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TblConfig
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "درباره ما";
     ViewData["Single"] = true;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
