--- a/GhasreMobile/Views/Shared/Components/SendCommentTopicView/SendCommentTopicView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/SendCommentTopicView/SendCommentTopicView.cshtml
@@ -9,11 +9,18 @@
           data-ajax-mode="replace"
           data-ajax-complete="SendCommentTopic()"
           data-ajax-update="#ajaxresultSendCommentTopic">
-        <textarea class="entry" asp-for="Body"></textarea>
+        <textarea class="entry" asp-for="Body" maxlength="300"></textarea>
         <span class="text-danger" asp-validation-for="Body"></span>
         <input type="hidden" id="TopicId" asp-for="TopicId" name="TopicId" />
         <div class="rowr uk-margin-small-top">
-            <button type="submit" class="btn btn-dashed uk-margin-auto-top" onclick="LoadingRun('#ajaxresultSendCommentTopic')">ثبت نظر</button>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <button type="submit" class="btn btn-dashed uk-margin-auto-top" onclick="LoadingRun('#ajaxresultSendCommentTopic')">ثبت نظر</button>
+            }
+            else
+            {
+                <a href="/Login" class="btn btn-dashed uk-margin-auto-top" onclick="LoadingRun('#ajaxresultSendCommentTopic')">ثبت نظر</a>
+            }
         </div>
     </form>
 </div>
