--- a/GhasreMobile/Views/Shared/Components/SendCommentView/SendCommentView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/SendCommentView/SendCommentView.cshtml
@@ -9,12 +9,20 @@
           data-ajax-mode="replace"
           data-ajax-complete="SendComment()"
           data-ajax-update="#ajaxresultSendComment">
-        <textarea class="entry" asp-for="Body"></textarea>
+        <textarea class="entry" asp-for="Body" maxlength="300"></textarea>
         <span class="text-danger" asp-validation-for="Body"></span>
         <input type="hidden" id="Rate" asp-for="Rate" name="Rate" value="4" />
         <input type="hidden" id="ProductId" asp-for="ProductId" name="ProductId" />
         <div class="rowr uk-margin-small-top">
-            <button type="submit" class="btn btn-dashed uk-margin-auto-top" onclick="LoadingRun('#ajaxresultSendComment')">ثبت نظر</button>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <button type="submit" class="btn btn-dashed uk-margin-auto-top" onclick="LoadingRun('#ajaxresultSendComment')">ثبت نظر</button>
+
+            }
+            else
+            {
+                <a href="/Login" class="btn btn-dashed uk-margin-auto-top" onclick="LoadingRun('#ajaxresultSendComment')">ثبت نظر</a>
+            }
             <div class="row star-container uk-margin-auto-right">
                 <span class="star-cb-group" id="myRaiting">
                     <input type="radio" id="rating-5" name="Raiting" onclick="submitRating()" value="5" /><label for="rating-5">5</label>
