--- a/GhasreMobile/Views/Shared/_BlogBlock.cshtml
+++ b/GhasreMobile/Views/Shared/_BlogBlock.cshtml
@@ -3,7 +3,7 @@
     Random r = new Random();
 }
 
-<div class="blog-block col mat-card">
+<a  href="/ViewBlog/@Model.BlogId/@Model.Title.Replace(" ","-")" class="blog-block col mat-card">
     <img src="~/Images/Blogs/@Model.MainImage" width="200" height="160" alt="وبلاگ" />
     <h3>@Model.Title</h3>
     <p dir="rtl">
@@ -11,6 +11,6 @@
     </p>
     <div class="row gap-t">
         <label>@Model.DateCreated.DateToShamsi()</label>
-        <a href="/ViewBlog/@Model.BlogId/@Model.Title.Replace(" ","-")" dir="rtl">بیشتر...</a>
+        <span href="/ViewBlog/@Model.BlogId/@Model.Title.Replace(" ","-")" dir="rtl">بیشتر...</span>
     </div>
-</div>
+</a>
