--- a/GhasreMobile/Views/Forum/NewForum.cshtml
+++ b/GhasreMobile/Views/Forum/NewForum.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AddTopicVm
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "موضوع جدید";
     ViewData["Single"] = true;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
