--- a/GhasreMobile/Views/Gallery/AlbumView.cshtml
+++ b/GhasreMobile/Views/Gallery/AlbumView.cshtml
@@ -1,6 +1,6 @@
-﻿@model IEnumerable<TblAlbum>
+﻿@model TblAlbum
 @{
-    ViewData["Title"] = "آلبوم";
+    ViewData["Title"] = "آلبوم"+ Model.Name;
     ViewData["Single"] = true;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -13,20 +13,12 @@
 
 <div class="mat-card col">
     <div class="gallery-grid">
-        <h3 class="uk-margin-bottom">گالری</h3>
+        <h3 class="uk-margin-bottom">   گالری محصول   @Model.Name</h3>
         <div class="grid" uk-lightbox>
-            @*@foreach (var item in Model)
+            @foreach (var item in Model.TblImage)
             {
-                <a href="~/Images/ProductAlbum/@item.Image" data-caption="@item.Album.Name"><img src="~/Images/ProductAlbum/@item.Image" alt="" /></a>
-            }*@
-            <a href="~/st/r/ads/a1.jpg" data-caption=""><img src="~/st/r/ads/a1.jpg" alt="" /></a>
-            <a href="~/st/r/ads/a2.jpg" data-caption=""><img src="~/st/r/ads/a2.jpg" alt="" /></a>
-            <a href="~/st/r/ads/a3.jpg" data-caption=""><img src="~/st/r/ads/a3.jpg" alt="" /></a>
-            <a href="~/st/r/ads/a4.jpg" data-caption=""><img src="~/st/r/ads/a4.jpg" alt="" /></a>
-            <a href="~/st/r/ads/a1.jpg" data-caption=""><img src="~/st/r/ads/a1.jpg" alt="" /></a>
-            <a href="~/st/r/ads/a2.jpg" data-caption=""><img src="~/st/r/ads/a2.jpg" alt="" /></a>
-            <a href="~/st/r/ads/a3.jpg" data-caption=""><img src="~/st/r/ads/a3.jpg" alt="" /></a>
-            <a href="~/st/r/ads/a4.jpg" data-caption=""><img src="~/st/r/ads/a4.jpg" alt="" /></a>
+                <a href="~/Images/ProductAlbum/@item.Image" data-caption="@Model.Name"><img src="~/Images/ProductAlbum/@item.Image" alt="@Model.Name" /></a>
+            }
         </div>
         <div class="row">
             <button class="btn btn-dashed uk-margin-auto" onclick="window.history.back()">بازگشت</button>
