admin: layout and delete in comment

--- a/GhasreMobile/Areas/Admin/Views/Comment/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Comment/Index.cshtml
@@ -45,6 +45,9 @@
                                                 <a onclick="Success(@item.CommentId)" class="text-success" uk-icon="checkmark-circle-outline"></a>
                                             </span>
                                         }
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="حذف نظر">
+                                            <a onclick="" class="text-danger" uk-icon="trash"></a>
+                                        </span>
                                     </td>
                                 </tr>
                             }
