--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -271,7 +271,7 @@
                                 <span class="icon-holder">
                                     <i uk-icon="storefront"></i>
                                 </span>
-                                <span class="title">فروشگاه</span>
+                                <span class="title">شعب</span>
                             </a>
                         </li>
 
@@ -329,10 +329,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <ul class="nav-left float-left">
-                            @*@Html.Action("P_UserBox", "Dashboard", new { area = "Admin" })
-                                @Html.Action("notification", "Dashboard", new { area = "Admin" })*@
-                        </ul>
+                        <a href="/logout" class="nav-left float-left ml-5 mt-4 text-secondary"> <span uk-icon="log-out"></span>خروج از حساب</a>
 
                     </div>
                 </div>
@@ -356,7 +353,7 @@
                 <footer class="content-footer bg-white">
                     <div class="footer border-0">
                         <div class="copyright">
-                            <span><b class="text-dark">قصر موبایل</b> 2020</span>
+                            <span><b class="text-dark">قصر موبایل</b> 2021</span>
                         </div>
                     </div>
                 </footer>
