--- a/GhasreMobile/Views/Forum/ForumView.cshtml
+++ b/GhasreMobile/Views/Forum/ForumView.cshtml
@@ -13,9 +13,9 @@
 
 @section Aside{
 
-  
-@await Component.InvokeAsync("AdView") 
-@await Component.InvokeAsync("AdView")
+
+    @await Component.InvokeAsync("AdView")
+    @await Component.InvokeAsync("AdView")
 }
 
 <nav class="breadcrumb uk-padding-remove">
@@ -24,7 +24,7 @@
 </nav>
 
 <div class="forum-block">
-    <form  id="ajaxresultSendCommentTopic" class="content" action="/Forum/SendComment" method="post"
+    <form id="ajaxresultSendCommentTopic" class="content" action="/Forum/SendComment" method="post"
           data-ajax="true"
           data-ajax-method="POST"
           data-ajax-mode="replace"
@@ -43,23 +43,23 @@
                 @Model.Body
             </p>
             <div class="fg-col uk-margin-medium-top">
-                <textarea name="Body" id="Body"  class="entry" placeholder="نظر شما..." required></textarea>
+                <textarea name="Body" id="Body" class="entry" placeholder="نظر شما..." required></textarea>
             </div>
         </div>
         <div class="action uk-margin-small-top">
             <span class="row uk-margin-auto-top">
                 <span uk-icon="ratio:.8;icon:chatbox-ellipses-outline"></span>
-                <span> @Model.TblTopicCommentRel.Where(i=>i.Comment.IsValid).ToList().Count </span>
+                <span> @Model.TblTopicCommentRel.Where(i => i.Comment.IsValid).ToList().Count </span>
             </span>
-            <a class="link-text  uk-margin-auto-top" href="" uk-icon="ratio:.8;icon:arrow-redo-outline"></a>
+            <a class="link-text uk-margin-auto-top" href="javascript:share(location.href,'@Model.Title')" uk-tooltip="اشتراک گذاری" uk-icon="ratio:.8;icon:share-social-outline"></a>
             <button class="btn btn-dashed uk-margin-auto-top uk-margin-auto-left">ثبت نظر</button>
         </div>
     </form>
     <div class="controls">
         <div class="col">
-            <button class="link-text" uk-icon="chevron-up" onclick="VoteUp(@Model.TopicId);"></button>
+            <button class="link-text up" uk-icon="chevron-up" onclick="VoteUp(@Model.TopicId);"></button>
             <label id="Vote@(Model.TopicId)">@Model.VoteCount</label>
-            <button class="link-text" uk-icon="chevron-down" onclick="VoteDown(@Model.TopicId);"></button>
+            <button class="link-text down" uk-icon="chevron-down" onclick="VoteDown(@Model.TopicId);"></button>
         </div>
     </div>
 </div>
@@ -89,6 +89,33 @@
         }
 
         function VoteUp(val) {
+
+            //#region buts
+            var vote = document.getElementById('Vote' + val);
+            const up = vote.parentElement.querySelector('.up');
+            const down = vote.parentElement.querySelector('.down');
+           
+            //#endregion
+
+            //#region localStorage
+
+            let cacheVote = votelist.filter(vote => vote.id === val)[0];
+
+            if (cacheVote?.isUp) return;
+            up.classList.remove('link-active');
+            down.classList.remove('link-active');
+
+            if (cacheVote)
+                votelist.splice(votelist.indexOf(cacheVote), 1);
+
+            up.classList.add('link-active');
+
+            votelist.push({ id: val, isUp: true });
+            // update local storage
+            localStorage.setItem(votelistKey, JSON.stringify(votelist));
+
+            //#endregion
+
             var result = Bjax("/Forum/VoteUp?id=", val, "SP");
             if (result) {
                 var vote = document.getElementById('Vote' + val);
@@ -97,15 +124,57 @@
                 window.location = "";
             }
         }
+
         function VoteDown(val) {
+
+            //#region buts
+            var vote = document.getElementById('Vote' + val);
+            const up = vote.parentElement.querySelector('.up');
+            const down = vote.parentElement.querySelector('.down');
+           
+            //#endregion
+
+            //#region localStorage
+
+            let cacheVote = votelist.filter(vote => vote.id === val)[0];
+
+            if (!cacheVote?.isUp) return;
+            up.classList.remove('link-active');
+            down.classList.remove('link-active');
+
+            if (cacheVote)
+                votelist.splice(votelist.indexOf(cacheVote), 1);
+
+            down.classList.add('link-active');
+
+            votelist.push({ id: val, isUp: false });
+            // update local storage
+            localStorage.setItem(votelistKey, JSON.stringify(votelist));
+
+            //#endregion
+
             var result = Bjax("/Forum/VoteDown?id=", val, "SP");
             if (result) {
-                var vote = document.getElementById('Vote' + val);
                 vote.innerText = parseInt(vote.innerText) - 1;
             } else {
                 window.location = "";
             }
         }
+
+        // Vote List
+        const votelistKey = "votelist";
+        // [{id,isUp},{5,true}]
+        let votelist = JSON.parse(localStorage.getItem(votelistKey)) || [];
+        let currentVote = votelist?.filter(x => x.id == @Model.TopicId)[0];
+
+        if (currentVote.isUp) {
+            const up = document.querySelector('.up');
+            up.classList.add('link-active');
+        } else {
+            const down = document.querySelector('.down');
+            down.classList.add('link-active');
+        }
+
     </script>
 
 }
