--- a/GhasreMobile/Areas/User/Views/Order/OnlineOrder.cshtml
+++ b/GhasreMobile/Areas/User/Views/Order/OnlineOrder.cshtml
@@ -9,7 +9,7 @@
     @if (OnlineOrder != "")
     {
         <div class="uk-alert uk-alert-success">
-            <p class="uk-text-success">سفارش شما ثبت شد و بعد از تائید، کارشناسان  ما با شما تماس میگیرند</p>
+            <p class="uk-text-success">سفارش شما ثبت شد و بعد از بررسی، کارشناسان  ما با شما تماس میگیرند</p>
         </div>
     }
 
