--- a/GhasreMobile/Areas/User/Views/Profile/ChangePassword.cshtml
+++ b/GhasreMobile/Areas/User/Views/Profile/ChangePassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ResetChangePasswordVm
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "تغیر رمز";
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
