--- a/GhasreMobile/Areas/User/Views/Wallet/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Wallet/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<TblWallet>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "کیف پول";
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
