--- a/GhasreMobile/Areas/User/Views/Wallet/Charge.cshtml
+++ b/GhasreMobile/Areas/User/Views/Wallet/Charge.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ChargeWalletVm
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "شارژ کیف پول";
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
