--- a/GhasreMobile/Areas/Admin/Views/Blog/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Blog/Components/Create.cshtml
@@ -31,7 +31,7 @@
         <label class="mt-2">تصویر پست</label>
         <br />
         <div class="custom-file col-md-7">
-            <input asp-for="MainImage" type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
+            <input required asp-for="MainImage" type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
             <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر</label>
         </div>
         <span asp-validation-for="MainImage" class="text-danger"></span>
@@ -43,7 +43,7 @@
         </div>
         <label>متن پست </label>
         <div>
-            <textarea asp-for="BodyHtml" id="DescriptionLongHtml" class="textarea-fix-height-300"></textarea>
+            <textarea required asp-for="BodyHtml" id="DescriptionLongHtml" class="textarea-fix-height-300"></textarea>
 
         </div>
         <span asp-validation-for="BodyHtml" class="text-danger"></span>
