--- a/GhasreMobile/Areas/Admin/Views/Home/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Home/Index.cshtml
@@ -120,7 +120,7 @@
                 </div>
                 <div class="card-body user-content">
                     <div class="row">
-                        <a href="/Admin/Ticket" class="col-md-4">
+                        <a href="/Admin/Ticket" class="col-md-3">
                             <div class="user-box alert alert-primary px-3 p-3 rounded shadow">
                                 <span uk-icon="mail"></span>
                                 <div class="user-title mb-3 mt-3">
@@ -131,7 +131,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="/Admin/Ticket" class="col-md-4">
+                        <a href="/Admin/Ticket" class="col-md-3">
                             <div class="user-box alert alert-success p-3 rounded shadow">
                                 <span uk-icon="mail-open"></span>
                                 <div class="user-title mb-3 mt-3">
@@ -142,7 +142,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="/Admin/Ticket" class="col-md-4">
+                        <a href="/Admin/Ticket" class="col-md-3">
                             <div class="user-box alert alert-danger px-3 p-3 rounded shadow">
                                 <span uk-icon="mail-unread"></span>
                                 <div class="user-title mb-3 mt-3">
@@ -150,6 +150,17 @@
                                 </div>
                                 <div class="user-count">
                                     <span class="icon-pic-primary font-weight-bold">@Model.NotSeenTicketCount</span>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="/Admin/Comment" class="col-md-3">
+                            <div class="user-box alert alert-danger px-3 p-3 rounded shadow">
+                                <span uk-icon="mail-unread"></span>
+                                <div class="user-title mb-3 mt-3">
+                                    <span class="icon-pic-primary">کامنت های تایید نشده</span>
+                                </div>
+                                <div class="user-count">
+                                    <span class="icon-pic-primary font-weight-bold">@Model.AllNotIsValidComment</span>
                                 </div>
                             </div>
                         </a>
