--- a/GhasreMobile/Areas/Admin/Views/Store/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Store/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<DataLayer.Models.TblStore>
 @{
-    ViewData["Title"] = "فروشگاه";
+    ViewData["Title"] = "شعب";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
